--- a/UploadFile/src/main/resources/application.properties
+++ b/UploadFile/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=UploadFile
+
+spring.datasource.url=jdbc:mysql://localhost:3306/School_Upload
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
